Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5654

Server crashes on second installation of daemon_example plugin

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 5.5.35, 10.0.8
    • 5.5.36, 10.0.9
    • None

    Description

      install soname 'libdaemon_example';
      uninstall soname 'libdaemon_example';
      install soname 'libdaemon_example';

      #5  <signal handler called>
      #6  0x00007f1c243ca730 in ?? () from /lib/x86_64-linux-gnu/libgcc_s.so.1
      #7  0x00007f1c243cac5b in ?? () from /lib/x86_64-linux-gnu/libgcc_s.so.1
      #8  0x00007f1c243cb0d2 in _Unwind_ForcedUnwind () from /lib/x86_64-linux-gnu/libgcc_s.so.1
      #9  0x00007f1c255c3980 in *__GI___pthread_unwind (buf=0x7f1c1ebfef40) at unwind.c:130
      #10 0x00007f1c255bbb5a in __do_cancel () at ../nptl/pthreadP.h:265
      #11 sigcancel_handler (sig=<optimized out>, si=0x0, ctx=<optimized out>) at nptl-init.c:203
      #12 <signal handler called>
      #13 0x00007f1c240dcbdd in nanosleep () at ../sysdeps/unix/syscall-template.S:82
      #14 0x00007f1c240dca50 in __sleep (seconds=<optimized out>) at ../sysdeps/unix/sysv/linux/sleep.c:138
      #15 0x00007f1c22dfe151 in ?? ()

      revision-id: elenst@wheezy-64.home-20140210195304-5i73njgwi5kf4obh
      revno: 4056
      branch-nick: 5.5

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.