MDEV-5654 Server crashes on second installation of daemon_example plugin

daemon plugin: join the thread to make sure it exits before the plugin is unloaded